# Isla-Reader

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LOCALIZATION_FIX_SUMMARY.md  Package.swift  README.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  SKIMMING_PERSISTENCE_UPDATE.md  TESTING_GUIDE.md  skills-lock.json
.claude/: settings.json
Batch/: ai.json
Config/: AISecrets.xcconfig.example  Base.xcconfig
Isla Reader/: ContentView.swift  Info.plist  Isla_ReaderApp.swift  Persistence.swift
Isla Reader.xcodeproj/: project.pbxproj
Isla ReaderTests/: AdMobRuntimeConfigurationTests.swift  AppLanguageTests.swift  BlockBuilderTests.swift  BookFileLocatorTests.swift  (+14 more)
server/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
server/app/: __init__.py  config.py  logging_utils.py  main.py  metrics_store.py  security.py  update_policy_store.py
server/app/routers/: __init__.py  key.py  metrics.py  notion_oauth.py  pages.py  update_policy.py
server/app/static/: app-ads.txt
server/app/static/landing/: changelog.html  index.html  privacy.html  support.html  terms.html
server/app/static/landing/content/: .en.json.swp  en.json  ja.json  ko.json  zh.json
server/isla_reader_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/scripts/: clear-metrics.sh  deploy.sh  generate-cert.sh  reload-systemd.sh  restart.sh  start-local-web.sh  stop.sh
server/tests/: test_metrics_clear.py  test_metrics_usage_counters.py  test_notion_oauth_exchange.py  test_public_pages.py  test_update_policy.py
(+161 files in other folders)
